# spok-engine

./: .gitignore  .gitmodules  CMakeLists.txt  prog.md  readme.md
dep/: CMakeLists.txt
lib/: libcglm.so.0  libcglm.so.0.8.5
src/: CMakeLists.txt  components.c  dummy.c
src/core/: _include.c  body.c  body.h  cmain.c  cmain.h  spok.c  state.c  state.h
src/graphics/: body.c  body.h  gfx.c  gmain.c  gmain.h  render.c  render.h  shader.c  shader.h
src/physics/: body.c  body.h  components.c  components.h  physics.c  pmain.c  pmain.h
src/public/spok/: _include.h  components.h  gfx.h  physics.h  spok.h
src/utility/: file.c  file.h  utils.h
test/: CMakeLists.txt  main.c
